Removing the Mojo buffers 16MB size limit. It is causing problems as we are migrating the current Chrome IPC messages to mojo and are starting to use Mojo buffers to replace the existing SharedMemory instances directly passed in IPC messages. Since Mojo buffer use SharedMemory, get rid of the check at the mojo level and rely on SharedMemory limit.

BUG=664239

Review-Url: https://codereview.chromium.org/2488253003
Cr-Commit-Position: refs/heads/master@{#431590}